Fix document rendering and update 2025.1 cycle testing
This commit fixes two issues:

1. Fixing document rendering

2. Update the testing as per the 2025.1 cycle testing[1]
by adding a new job to run on Jammy which can be removed
in future cycle. Also, ignore E231 checks in pep8 job.

[1] https://governance.openstack.org/tc/reference/runtimes/2025.1.html

Change-Id: Id9f8171349ca017f0dfdd640b6fa88ee27c943c3
Signed-off-by: Takashi Natsume <takanattie@gmail.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -57,6 +57,14 @@
     parent: masakari-functional-devstack
     description: |
       Masakari functional tests job based on devstack (two-node).
+    nodeset: openstack-two-node-noble
+
+- job:
+    name: masakari-functional-devstack-multinode-jammy
+    voting: false
+    parent: masakari-functional-devstack
+    description: |
+      Masakari functional tests job based on devstack (Jammy two-node).
     nodeset: openstack-two-node-jammy
 
 - job:
@@ -91,11 +99,13 @@
       jobs:
         - openstack-tox-linters
         - masakari-functional-devstack-multinode
+        - masakari-functional-devstack-multinode-jammy
         - masakari-functional-devstack-ipv6
     gate:
       jobs:
         - openstack-tox-linters
         - masakari-functional-devstack-multinode
+        - masakari-functional-devstack-multinode-jammy
         - masakari-functional-devstack-ipv6
     periodic:
       jobs:
