Drop support for Python 3.8, 3.9
Python 3.8 was untested for some time. Python 3.9 is no longer tested
in Flamingo.

We also update our tox.ini to reflect versions we're going to see in the
wild nowadays.

Change-Id: I5a7da653611aaaf761f3290f577b85df5a0e6bb2
Signed-off-by: Stephen Finucane <stephenfin@redhat.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,10 @@ description_file =
     README.rst
 author = OpenStack
 author_email = openstack-discuss@lists.openstack.org
-home_page = https://docs.openstack.org/masakari/latest/
+url = https://docs.openstack.org/masakari/latest/
+python_requires = >=3.10
 classifier =
+    Development Status :: 5 - Production/Stable
     Environment :: OpenStack
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
@@ -14,10 +16,11 @@ classifier =
     Operating System :: POSIX :: Linux
     Programming Language :: Python
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: Implementation :: CPython
 
 [files]
 data_files =
