Replace license classifier
... according to the following warning from setuptools.

SetuptoolsDeprecationWarning: License classifiers are deprecated.

********************************************************************************
Please consider removing the following classifiers in favor of a SPDX license expression:

License :: OSI Approved :: Apache Software License

See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license for details.
********************************************************************************

Change-Id: Iad7f5e349e18b548d8ace366377aca3caadd286f
Co-authored-by: Takashi Kajinami <kajinamit@oss.nttdata.com>
Signed-off-by: Ivan Anfimov <lazekteam@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = masakari
 summary = Virtual Machine High Availability (VMHA) service for OpenStack
 description_file =
     README.rst
+license = Apache-2.0
 author = OpenStack
 author_email = openstack-discuss@lists.openstack.org
 url = https://docs.openstack.org/masakari/latest/
@@ -12,7 +13,6 @@ classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
-    License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
     Programming Language :: Python
     Programming Language :: Python :: 3
