Enable healthcheck endpoint
The endpoint provided by oslo.middleware is useful to enable health
monitor of API, especially in case API runs behind load balancers.

Change-Id: I9b0ffa3a7754e9523190e9a0ec6e05854a0e97a4
Signed-off-by: Takashi Kajinami <kajinamit@oss.nttdata.com>

--- a/etc/masakari/api-paste.ini
+++ b/etc/masakari/api-paste.ini
@@ -2,7 +2,7 @@
 use = call:masakari.api.urlmap:urlmap_factory
 /: apiversions
 /v1: masakari_api_v1
-
+/healthcheck: healthcheck
 
 [composite:masakari_api_v1]
 use = call:masakari.api.auth:pipeline_factory_v1
@@ -44,3 +44,8 @@ pipeline = faultwrap http_proxy_to_wsgi apiversionsapp
 
 [app:apiversionsapp]
 paste.app_factory = masakari.api.openstack.ha.versions:Versions.factory
+
+[app:healthcheck]
+paste.app_factory = oslo_middleware:Healthcheck.app_factory
+backends = disable_by_file
+disable_by_file_path = /etc/masakari/healthcheck_disable
