--- a/tox.ini
+++ b/tox.ini
@@ -134,11 +134,10 @@ show-source = True
 # The below hacking rules by default are disabled should be enabled:
 # [H106] Don't put vim configuration in source files.
 # [H203] Use assertIs(Not)None to check for None.
-# [E231] missing whitespace after ','
 # [H904] Delay string interpolations at logging calls.
 enable-extensions = H106,H203,H904
 # [W504] line break after binary operator (use W503 instead)
-ignore = E123,E125,E128,E231,E731,H405,W504
+ignore = E123,E125,E128,E731,H405,W504
 builtins = _
 exclude = .venv,.git,.tox,dist,doc,*lib/python*,*egg,build
 
